:sparkles: Feat :  홈 화면 UI 구성 - HomeFragment 클래스 생성 - 상단에 메뉴 버튼 배치 - 상단에 검색창 배치 - 하단에 카메라 버튼 배치 - 하단에 내 위치 근처 충전소 버튼 배치 - 하단에 현재 위치 버튼 배치 - 중앙에 네이버 맵 배치
Related to: #19

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">CarBap</string>
+    <string name="searchbar_hint">주소를 입력해주세요</string>
+    <string name="menu_description">메뉴 버튼</string>
+    <string name="camera_description">카메라 버튼</string>
+    <string name="btn_show_charger_list">내 위치 근처 충전소</string>
+    <string name="current_location_description">현재 위치 버튼</string>
 </resources>
