:sparkles: Feat : 드로워 레이아웃 생성, 화면 전환 기능 구현 - 드로워 레이아웃 배치 - 카메라 버튼 FAB 버튼에서 일반 아이콘 버튼으로 수정 - MyChargerFragment (내 카밥 확인 화면) 클래스 생성 - MyPointFragment (포인트 내역 확인) 클래스 생성 - RegisterChargerFragment(카밥 등록 화면) 클래스 생성 - MyReservationFragment(예약 내역 확인 화면) 클래스 생성 - 드로워 목록 클릭시 담당하는 화면으로 이동
Related to: #19

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -5,4 +5,13 @@
     <string name="camera_description">카메라 버튼</string>
     <string name="btn_show_charger_list">내 위치 근처 충전소</string>
     <string name="current_location_description">현재 위치 버튼</string>
+    <string name="my_point">포인트 내역 확인</string>
+    <string name="register_charger">카밥 등록</string>
+    <string name="my_reservation">예약 내역 확인</string>
+    <string name="my_charger">내 카밥 확인</string>
+    <string name="softeer_nickname">소프티어님</string>
+    <string name="account_description">계정 아이콘</string>
+    <string name="logout">로그아웃</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
