:lipstick:  Feat : 로그인 화면 구성 - LoginFragment 클래스 생성 - 로그인 화면 UI 구성 Related to: #41

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
     <string name="charger_charge_speed_example">충전속도 7kwh</string>
     <string name="charger_location_description">카밥 위치 아이콘</string>
     <string name="charger_speed_description">카밥 충전속도</string>
+    <string name="app_icon_description">카밥 아이콘</string>
+    <string name="email">이메일</string>
+    <string name="password">패스워드</string>
+    <string name="login">로그인</string>
+    <string name="signup">회원가입</string>
 </resources>
