--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="password">패스워드</string>
     <string name="login">로그인</string>
     <string name="signup">회원가입</string>
+    <string name="next">다음</string>
 </resources>
