--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -28,5 +28,7 @@
     <string name="login">로그인</string>
     <string name="signup">회원가입</string>
     <string name="next">다음</string>
+    <string name="nickname">닉네임</string>
     <string name="email_duplicate_confirm">이메일 중복 확인</string>
+    <string name="nickname_duplicate_confirm">닉네임 중복 확인</string>
 </resources>
