:lipstick: Fix : 회원 가입 화면 관련 프래그먼트 UI 수정 - 네비게이션 전환 방식 변경을 위해 SignUpFragment 화면에 버튼 제거 - 두 자식 프래그먼트에 RegisterNicknameFragment, RegisterEmailPasswordFragment에 버튼 추가 Related to: #41

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="nickname">닉네임</string>
     <string name="email_duplicate_confirm">이메일 중복 확인</string>
     <string name="nickname_duplicate_confirm">닉네임 중복 확인</string>
+    <string name="complete_signup">완료</string>
 </resources>
