:lipstick: Feat : 충전소 등록 Fragment UI 구성 - 충전소 등록 플로우의 HostFragment에 해당하는 RegisterChargerFragment의 기본 UI 구성
Related to: #63

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="email_duplicate_confirm">이메일 중복 확인</string>
     <string name="nickname_duplicate_confirm">닉네임 중복 확인</string>
     <string name="complete_signup">완료</string>
+    <string name="arrow_back_description">뒤로 가기 버튼</string>
+    <string name="cancel_icon_description">취소 버성</string>
 </resources>
