--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="error_icon">조건 불만족 아이콘</string>
     <string name="first_condition_hint">외부인이 주차가 가능해야 등록이 가능해요</string>
     <string name="condition_check_second">보유한 충전기가 개인(비개방형) 소유의\n전기차 충전기인가요?</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="register_location_title">내 카밥의 위치를\n알려주세요</string>
+    <string name="register_location_searchbar_hint">지번, 도로명, 건물명으로 검색</string>
+    <string name="set_current_location">현재 위치로 설정</string>
+    <string name="check_charger_location">위치 확인</string>
 </resources>
