--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     <string name="won">원</string>
     <string name="input_price_hint">입력하기</string>
     <string name="percent_hour">시간 당</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
