--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -92,4 +92,13 @@
     <string name="description_input_hint">입력하세요 (500자 이내)</string>
     <string name="charger_image_upload">충전소 사진 업로드</string>
     <string name="optional">선택</string>
+    <string name="register_time_title">내 카밥 이용 불가 시간을\n설정해 주세요!</string>
+    <string name="register_time_body">내가 이용하는 시간 대를 설정하면 그 시간 대에는 구매자가\n이용할 수 없어요. 설정한 시간은 한달동안 유지되며, 수정\n이 필요한 경우 수정페이지를 이용해주세요.</string>
+    <string name="icon_register_time_description">공유 시간 등록 아이콘</string>
+    <string name="complete_register">완료하기</string>
+    <string name="register_time_description">이 시간에는 구매자가 사용할 수 없어요</string>
+    <string name="start_time">시작 시간</string>
+    <string name="end_time">종료 시간</string>
+    <string name="register_time_hint">선택해주세요</string>
+    <string name="register_time_divider">-</string>
 </resources>
