--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -56,8 +56,7 @@
     <string name="set_current_location">현재 위치로 설정</string>
     <string name="check_charger_location">위치 확인</string>
     <string name="register_detail_title">내 카밥 정보를\n입력해주세요</string>
-    <string name="post_title">대여 글 제목</string>
-    <string name="post_title_hint">입력해 주세요 (30자 이내)</string>
+    <string name="charger_nickname_hint">입력해 주세요 (30자 이내)</string>
     <string name="charger_location_type">충전 장소</string>
     <string name="house">단독 주택</string>
     <string name="villa">빌라</string>
@@ -90,7 +89,7 @@
     <string name="required">필수</string>
     <string name="register_description_subtitle">내 카밥 이용 방법 작성</string>
     <string name="description_input_hint">입력하세요 (500자 이내)</string>
-    <string name="charger_image_upload">충전소 사진 업로드</string>
+    <string name="charger_image_upload">사진 등록</string>
     <string name="optional">선택</string>
     <string name="register_time_title">내 카밥 이용 불가 시간을\n설정해 주세요!</string>
     <string name="register_time_body">내가 이용하는 시간 대를 설정하면 그 시간 대에는 구매자가\n이용할 수 없어요. 설정한 시간은 한달동안 유지되며, 수정\n이 필요한 경우 수정페이지를 이용해주세요.</string>
@@ -116,4 +115,5 @@
     <string name="cancel">취소</string>
     <string name="upload">업로드</string>
     <string name="disabled_time_title">예약 불가능 시간</string>
+    <string name="charger_nickname_title">카밥 닉네임</string>
 </resources>
