:truck: Feat : 내 카밥 리스트 화면을 담당하는 MyChargerListFragment 화면 UI 구성 - fragment_my_charger_list.xml 파일에 UI 컴포넌트 배치 - 리사이클러 뷰 아이템 (등록된 내 카밥 정보) 레이아웃 구성
Related to: #83

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -116,4 +116,6 @@
     <string name="upload">업로드</string>
     <string name="disabled_time_title">예약 불가능 시간</string>
     <string name="charger_nickname_title">카밥 닉네임</string>
+    <string name="current_filter">등록순</string>
+    <string name="filter_icon_description">필터 아이콘</string>
 </resources>
