--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -122,4 +122,5 @@
     <string name="detail_description">상세 설명</string>
     <string name="charger_image_description">등록한 충전소 사진</string>
     <string name="more_icon_description">더보기 아이콘</string>
+    <string name="calendar_icon_description">캘린더 아이콘</string>
 </resources>
