:lipstick: Feat : EditBottomSheetFragment 클래스 생성, UI 구성 - 내 카밥 리스트의 상단 우측 케밥 아이콘을 클릭 시 나타나는 하단 시트 클래스인 EditBottomSheetFragment 클래스 생성 - EditBottomSheetFragment 화면 UI 구성
Related to: #83

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -135,4 +135,8 @@
     <string name="reservation_price">대여 비용 : 3,400원</string>
     <string name="reject_reservation">거절</string>
     <string name="approve_reservation">승인</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="edit">수정</string>
+    <string name="delete">삭제</string>
 </resources>
