--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -139,4 +139,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="edit">수정</string>
     <string name="delete">삭제</string>
+    <string name="delete_dialog_body">삭제할 경우 다시 되돌릴 수 없습니다.</string>
+    <string name="delete_dialog_title">삭제하시겠습니까?</string>
+    <string name="confirm_delete">확인</string>
 </resources>
