--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -142,4 +142,6 @@
     <string name="delete_dialog_body">삭제할 경우 다시 되돌릴 수 없습니다.</string>
     <string name="delete_dialog_title">삭제하시겠습니까?</string>
     <string name="confirm_delete">확인</string>
+    <string name="my_charger_detail_edit">수정 완료</string>
+    <string name="icon_edit_description">수정 아이콘</string>
 </resources>
