:lipstick: Feat : MyPointFragment 화면 UI 구성
- 포인트 사용 내역 화면을 담당하는 MyPointFragment 클래스 화면 UI 구성
- strings.xml 에 필요한 문자열 상수들 정의
- 포인트 충전 이미지를 위한 icon_point_charge.png 추가
- RecyclerView 에서 사용될 point_history_item.xml 구성

Resolved: #89

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -116,4 +116,8 @@
     <string name="upload">업로드</string>
     <string name="disabled_time_title">예약 불가능 시간</string>
     <string name="charger_nickname_title">카밥 닉네임</string>
+    <string name="point_charge_description">포인트 충전</string>
+    <string name="point_charge_title">포인트 내역</string>
+    <string name="total_points">총 포인트</string>
+    <string name="empty_point_charge">포인트 내역이 없어요.</string>
 </resources>
