--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -156,4 +156,8 @@
     <string name="apply_complete_title">카밥 예약 신청이 완료되었어요\n예약 확정까지 기다려 주세요!</string>
     <string name="apply_complete_image_description">신청 완료 이미지</string>
     <string name="apply_complete_body">예약 확정 여부는 예약 내역에서 확인할 수 있어요</string>
+    <string name="apply_confirm_title">카밥 주인에게 \n예약 신청을 보낼까요?</string>
+    <string name="apply_confirm_time_title">예약 시간</string>
+    <string name="apply_confirm_back">뒤로 가기</string>
+    <string name="apply_confirm_apply">신청</string>
 </resources>
