:lipstick: Feat : strings.xml 파일 string resource 추가 - 홈화면 닉네임 반영하기 위해 strings.xml 파일 string resource 추가
Related to: #137

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -165,4 +165,5 @@
     <string name="reservation_approve">승인</string>
     <string name="reservation_reject">거절</string>
     <string name="empty_reservation_list">카밥 예약 내역이 없어요</string>
+    <string name="drawer_nickname">%1$s님</string>
 </resources>
