:lipstick: Feat : strings.xml 리소스 추가 - 신청한 예약 시간대 텍스트를 위한 리소스 추가
Related to: #153

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -166,4 +166,5 @@
     <string name="reservation_reject">거절</string>
     <string name="empty_reservation_list">카밥 예약 내역이 없어요</string>
     <string name="drawer_nickname">%1$s님</string>
+    <string name="apply_confirm_time">%1$s:00 - %2$s:00</string>
 </resources>
