:recycle: Refactor : 브랜치 머지로 인한 Confilt 해결 - 다른 타입의 변수를 갖고 있는 동일한 데이터 클래스가 두 개의 브랜치에 생성됨 - 새로운 데이터 클래스 생성 및 데이터 레이어와 뷰 모델 수정 - ReservationTimeModel 변수 수정 - String resource 수정
Related to: #153

--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -171,4 +171,5 @@
     <string name="price_format">%1$s원/kwh</string>
     <string name="empty_own_charger_list">등록된 카밥이 없어요ㅠ</string>
     <string name="empty_charger_reservation_list">들어온 예약이 없어요ㅠ</string>
+    <string name="apply_confirm_time">%1$s:00 - %2$s</string>
 </resources>
