--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -172,4 +172,17 @@
     <string name="empty_own_charger_list">등록된 카밥이 없어요ㅠ</string>
     <string name="empty_charger_reservation_list">들어온 예약이 없어요ㅠ</string>
     <string name="apply_confirm_time">%1$s:00 - %2$s</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="icon_payment_success">결제 성공 아이콘</string>
+    <string name="reservation_time_title">예약 시간</string>
+    <string name="success_charger_location_title">충전기 위치</string>
+    <string name="expected_charge_title">예상 충전량</string>
+    <string name="rental_price_title">대여 금액</string>
+    <string name="icon_carbap_pay_description">카밥 페이 아이콘</string>
+    <string name="success_payment_title">결제를 완료했어요</string>
+    <string name="fail_payment_title">결제를 실패하였습니다</string>
+    <string name="icon_payment_fail_description">결제 실패 아이콘\n</string>
+    <string name="fail_payment_description">잔액이 부족합니다</string>
+    <string name="payment_confirm_title">결제하시겠습니까?</string>
+    <string name="remain_point_title">카밥 페이 남은 잔액</string>
 </resources>
