--- a/AOS/app/src/main/res/values/strings.xml
+++ b/AOS/app/src/main/res/values/strings.xml
@@ -171,7 +171,7 @@
     <string name="price_format">%1$s원/kwh</string>
     <string name="empty_own_charger_list">등록된 카밥이 없어요ㅠ</string>
     <string name="empty_charger_reservation_list">들어온 예약이 없어요ㅠ</string>
-    <string name="apply_confirm_time">%1$s:00 - %2$s</string>
+    <string name="apply_confirm_time">%1$s:00 - %2$s:00</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="icon_payment_success">결제 성공 아이콘</string>
     <string name="reservation_time_title">예약 시간</string>
